# my1st_rust_project

./: Cargo.toml  README.md
src/: main.rs
